[gd_scene load_steps=4 format=2]

[ext_resource path="res://Textures/Title/TitleBG.png" type="Texture" id=1]
[ext_resource path="res://HUD/Theme.tres" type="Theme" id=2]
[ext_resource path="res://LoadingScreen.gd" type="Script" id=3]

[node name="LoadingScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="Label" type="Label" parent="."]
margin_left = 30.0
margin_top = 6.0
margin_right = 233.0
margin_bottom = 64.0
rect_scale = Vector2( 5, 3 )
theme = ExtResource( 2 )
text = "LOADING."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Label2" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -726.0
margin_top = -58.0
theme = ExtResource( 2 )
text = "SONIC SHOCK - OUT OF STOCK GAME JAM"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PercentLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -30.0
margin_right = 50.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 60 )
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 50, 30 )
theme = ExtResource( 2 )
text = "1000%"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
